--- a/contribution/begginer.html
+++ b/contribution/begginer.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>enter your name</title>
+        <title>Joy Taylor</title>
     </head>
     <body>
-Enter your name!
+        Joy Taylor
     </body>
 </html>
